# bootstrapi

./: .coverage  .gitignore  README.md  dockerfile  requirements.txt  run.py  setup.cfg  setup.py
.github/workflows/: build.yaml  release.yaml
bootstrapi/: conversion.py  parser.py  router.py  sqlalchemy.py
tests/: test_db.py  test_parser.py  test_router.py  test_sqlalchemy.py
