[metadata]
name = bootstrapi
version = 0.1.1
author = Mike Pieters
author_email = me@mikepieters.com
description = Generate an API from an existing database automatically. Includes OpenAPI docs and OData like queries.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrpowerus/bootstrAPI
project_urls =
    Bug Tracker = https://github.com/mrpowerus/bootstrAPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir=
    =.
packages=bootstrapi
python_requires = >=3.6
install_requires = 
    fastapi
    SQLAlchemy
    uvicorn
    requests 

[coverage:run]
omit =
    .venv/*
    tests/*
    conftest.py

[options.packages.find]
where=.